--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ p {
 </head>
 <body>
     <nav class="navbar">
-        <a href="/index.html">Inicio</a>
-        <a href="/HTML/CV/index.html">Currículum</a>
+        <a href="https://samanthar-cruz.github.io/u2progWeb/">Inicio</a>
+        <a href="https://samanthar-cruz.github.io/cv/">Currículum</a>
     </nav>
 
     <div class="container" id="inicio">
